tests/ui/rfcs/rfc-2093-infer-outlives/explicit-projection.stderr
error: rustc_outlives
  --> $DIR/explicit-projection.rs:8:1
   |
LL | struct Foo<'a, A, B> where A: Trait<'a, B>
   | ^^^^^^^^^^^^^^^^^^^^
   |
   = note: B: 'a

error[E0640]: rustc_outlives
  --> $DIR/explicit-projection.rs:8:1
   |
LL | struct Foo<'a, A, B> where A: Trait<'a, B>
   | ^^^^^^^^^^^^^^^^^^^^
   |
note: B: 'a
  --> $DIR/explicit-projection.rs:3:29
   |
LL | trait Trait<'x, T> where T: 'x {
   |                             ^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0640`.
